勘定科目の区分について「資本」を「純資産」に改める
現代での会計基準では資本と純資産は等価ではない
参考：https://www.jikkyo.co.jp/syougyou/pdf/doc03/s93_02.pdf
5つに区分するならば純資産にすべき。そうでなければ5ついずれにもあてはまらないケースが想定される
例えば、その他有価証券評価差額金

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -18,7 +18,7 @@ ja:
     attributes:
       account:
         name: 勘定科目名
-        category: 区分（資産・負債・資本・収益・費用）
+        category: 区分（資産・負債・純資産・収益・費用）
         is_standard: デフォルト勘定科目かどうか
       journal_entry:
         entry_date: 仕訳日
