仕訳一覧画面ページネーションUIをスタイリング

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,13 @@ ja:
   time:
     formats:
       full_date: "%Y年%m月%d日 (%a) %H:%M"
+  views:
+    pagination:
+      first: "最初"
+      last: "最後"
+      previous: "前"
+      next: "次"
+      truncate: "&hellip;"
   activerecord:
     errors:
       models:
