会計年度の開始付きの名前を accounting_period_start_month に改める
会計期間は典型的には12ヶ月だが、決算月の変更に伴って伸びたり短くなったりする
そのため、fiscal year よりも accounting period のほうがより実態に即した命名であると判断
また _num という接尾辞は冗長な印象を受けたので削る

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -35,7 +35,7 @@ ja:
         is_standard: デフォルト勘定科目かどうか
       company:
         name: 事業所名
-        fy_start_month_num: 会計年度の開始月
+        accounting_period_start_month: 会計年度の開始月
       journal_entry:
         entry_date: 仕訳日
         summary: 摘要
